testsuite/poke.pkl/int-struct-type-diag-16.pk
/* { dg-do compile } */

type Foo =  /* { dg-error "unions can't be integral" } */
  union int<32>
  {
    int a;
  };
